--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,9 @@
 
     <title>Wild Race</title>
 
+    <script th:inline="javascript">
+        document.frontendData = [[${frontendData}]];
+    </script>
 </head>
 <body>
 
