--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" th:href="@{'/favicon.ico'}">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
 
-    <th:block th:if="isProdMode" th:each="name : ${cssFiles}">
-        <link th:href="@{${host} + 'css/' + ${name}}" rel="stylesheet" />
+    <th:block th:each="cssFile : ${cssFiles}">
+        <link th:href="@{${cssFile}}" rel="stylesheet" />
     </th:block>
 
     <title>Wild Race</title>
@@ -27,10 +27,8 @@
 
 <div id="app"></div>
 
-<script th:if="${!isProdMode}" th:src="@{${host} + 'app.js'}"></script>
-
-<th:block th:if="isProdMode" th:each="name : ${jsFiles}">
-    <script th:src="@{${host} + 'js/' + ${name}}"></script>
+<th:block th:each="jsFile : ${jsFiles}">
+    <script th:src="@{${jsFile}}"></script>
 </th:block>
 
 </body>
